API in github, add model to API
