# api/src/_ui/routeREST.ts
@@ -202,7 +202,7 @@ export default function attachRoutes(app: Application, api: APIApplication) {
             if (baseURL === undefined || name === undefined || overlayType === undefined) {
                 res.status(INVALID_PARAMETERS_STATUS).send("invalid parameter");
             } else {
-                api.createSession(req.token, webSiteId, baseURL, name, overlayType)
+                api.createSession(token, webSiteId, baseURL, name, overlayType)
                     .then(creationResult => {
                         if (creationResult === "Unauthorized") {
                             res.status(FORBIDDEN_STATUS).send(creationResult);
@@ -240,6 +240,35 @@ export default function attachRoutes(app: Application, api: APIApplication) {
                         } else {
                             logger.info("Exploration is added");
                             res.json(explorationResult);
+                        }
+                    })
+                    .catch((e) => {
+                        logger.error(`error:${e}`);
+                        res.status(INTERNAL_SERVER_ERROR_STATUS).send({ error: e });
+                    });
+            }
+        }
+    });
+
+
+    app.post("/models", (req, res) => {
+        logger.info(`create model`);
+        const { depth, interpolationfactor, predictionType } = req.body;
+        if (req.token === undefined) {
+            logger.warn(`no token`);
+            res.status(FORBIDDEN_STATUS).send("No token");
+        } else {
+            const token: Token = req.token;
+            if (depth === undefined || interpolationfactor === undefined || predictionType === undefined) {
+                res.status(INVALID_PARAMETERS_STATUS).send("invalid parameter");
+            } else {
+                api.createModel(token, depth, interpolationfactor, predictionType)
+                    .then(creationResult => {
+                        if (creationResult === "Unauthorized") {
+                            res.status(FORBIDDEN_STATUS).send(creationResult);
+                        } else {
+                            logger.info("session is created and added");
+                            res.send(creationResult);
                         }
                     })
                     .catch((e) => {
